--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ NODE_ENV = development
 PORT: 3000
 DB_HOST = "localhost"
 DB_USER = "root"
-DB_PASSWORD = "Matias0502*"
-DB: "breakroutines"
+DB_PASSWORD = ""
+DB: ""
