--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon server.js",
     "debug": "cross-env NODE_ENV=development nodemon --inspect server.js",
-    "test": "cross-env NODE_ENV=test babel-tape-runner test/test-*.js",
-    "pretest": "eslint ."
+    "test": "cross-env NODE_ENV=development jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +24,7 @@
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
