--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon server.js",
     "debug": "cross-env NODE_ENV=development nodemon --inspect server.js",
-    "test": "cross-env NODE_ENV=development jest --detectOpenHandles"
+    "test": "cross-env NODE_ENV=development jest "
   },
   "keywords": [],
   "author": "",
